Tests for rewriting of java.lang.runtime.ObjectMethods.bootstrap dynamic callsites/constants
Former-commit-id: 2ee999f12bf1ae9ef128617c90290d8f0c95e084